# LiveSplit.SonicHeroesDolphin

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  state.rs
