[package]
name = "heroes-dolphin-autosplitter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/Jujstme/asr", rev ="2ae6480", features = [
    # "alloc", # Working with allocations.
    "derive", # Defining your own settings structs and converting endianness.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    # "integer-vars", # Setting integer variables.
    "signature", # Scanning signatures.
    # "gba", # Accessing Game Boy Advance emulators.
    "gcn" # Accessing Gamecube emulators.
    # "genesis", # Accessing Genesis emulators.
    # "ps1", # Accessing PlayStation emulators.
] }



arrayvec = { version = "0.7.4", default-features = false }
bitflags = "2.4.0"
numtoa = "0.2.4"



[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
